# arsonbot

./: FK.py  IK.py  PD_GC.py  README.md  config.py  gravity.py  ibvs_controller.py  image_jacobian.py  lbp.py  lpb.py  main.py  minilab2_hardware.py  motor_interface.py  run_windows.bat  setup_windows.bat  test_webcam.py  vision.py
camera_utils/: image_jacobian.py  main_vision.py
controller_utils/: FK.py  PD_GC.py  gravity.py  lpb.py  motor_interface.py
dynamixel-controller/: pyproject.toml
dynamixel-controller/src/dynamixel_controller.egg-info/: PKG-INFO  top_level.txt
extras/: ibvs_controller.py
mechae263C_helpers/: pyproject.toml
mechae263C_helpers/src/mechae263C_helpers.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
mechae263C_helpers/src/mechae263C_helpers/minilabs/: fixed_freq_loop_manager.py
src/: IK.py  arson.py  color_tracking.py  config.py  ibvs_controller.py  joint_limits.txt  lpb.py  main copy.py  main.py  minilab2.py  position_control.py  run_windows.bat  saved_main.py  setup_windows.bat  test_IK.py  test_webcam.py  vision.py
src/camera_calibration/: camera_calibration.py  camera_calibration_results.txt  color_mask.py  color_tracking.py  test_webcam.py
src/controller_utils/: FK.py  IK.py  PD_GC.py  gravity.py  lpb.py  motor_interface.py
src/dynamixel-controller/: README.md  docs.md
src/dynamixel-controller/src/dxl/DynamixelJSON/: MX106.json  MX28.json  MX64.json
src/dynamixel-controller/src/dynamixel_controller.egg-info/: SOURCES.txt  requires.txt
src/mechae263C_helpers/src/mechae263C_helpers/minilabs/: __init__.py  (+1 more)
